# obazldeps

./: .bazelrc  .gitignore  .obazlrc  README.md  WORKSPACE.bazel  WORKSPACE.bzl  gtags.conf
docs/: NOTES.md
repl/: BUILD.bazel  repl.c  xen_repl.c
runner/: BUILD.bazel  runner.c
scm/: README.md  alist.scm  camlark.scm  camlark_test.scm  clojure.scm  codept.scm  diagnostics.scm  dune.scm  dune_actions.scm  dune_ingest.scm  dune_normalize.scm  dune_stanza_executable.scm  dune_stanza_fields.scm  dune_stanza_library.scm  dune_stanza_rule.scm  dune_stanzas.scm  emit.scm  fscrawl.scm  ftw.scm  lookup_tables.scm  ocamlark.scm  ocamlark_test.scm  opam.scm  resolve_fs_refs.scm  srfi.scm  starlark.scm  string.scm  utils.scm
scm/dune/: NOTES.md  stanza_executable.scm
src/: BUILD.bazel  README.md  cmd_runner.c  codept.c  codept_emit.c  codept_parser.c  config.c  fs.c  glob.c  s7_config.c  utils.c
test/: BUILD.bazel  README.adoc  runner.c  work.scm
test/ocaml/: README.adoc  aliases.dune  rules.scm  runner.scm  self_build_stubs_archive.dune
test/ocaml/rules/: README.adoc  asmcomp.scm  bash.scm  bytecomp.scm  copy.scm  make.scm  parsing.scm  progn.scm  run.scm  with-stdout-to.scm  write-file.scm
test/ocaml/stanzas/: copy_stanzas.scm
test/tezos/: aliases.scm  bash.scm  lib_clic.scm  progn.scm  rules.scm  run.scm  runner.scm  with-stdout-to.scm
