load("@rules_cc//cc:defs.bzl", "cc_binary")

##########
cc_binary(
    name  = "runner",
    srcs  = ["runner.c", "runner.h"],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/ocamlark/src",

        "-I$(GENDIR)/runner",
        "-I$(GENDIR)/external/ocamlark/runner",

        "-Iexternal/uthash/include",
        "-Iexternal/logc/src",
        "-Iexternal/libinih",
    ],
    # data = [
    #     "//scm:ocamlark.scm"
    # ],
    deps = [
        "//src:codept",
        "//external/libinih:inih",
        "@logc//:logc",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        # "obazl_codept.c",
        # "obazl_config.c",
        # "obazl_codept_parser.c",
        # "obazl_fs.c",
        # "obazl_opam.c",
        # "obazl_utils.c",
        "runner.c",
    ],
    outs = [
        # "obazl_codept.h",
        # "obazl_config.h",
        # "obazl_codept_parser.h",
        # "obazl_fs.h",
        # "obazl_opam.h",
        # "obazl_utils.h",
        "runner.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location runner.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        # "    $(location obazl_codept.c) \\",
        # "    $(location obazl_config.c) \\",
        # "    $(location obazl_codept_parser.c) \\",
        # "    $(location obazl_fs.c) \\",
        # "    $(location obazl_opam.c) \\",
        # "    $(location obazl_utils.c) ",
        "    $(location runner.c) ",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)
