load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(glob(["*.scm"]))

##########
cc_library(
    name  = "codept",
    # alwayslink = True,
    linkstatic = 1,
    srcs  = [
        "codept.c",
        "codept.h",
        "codept_emit.c",
        "codept_emit.h",
        "codept_parser.c",
        "codept_parser.h",
        "config.c",
        "config.h",
        "fs.c",
        "fs.h",
        "utils.c",
        "utils.h",
        "@uthash//:include",
    ],
    data = [
        "//scm:ocamlark.scm"
    ],
    hdrs = [
        "ocamlark.h"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/ocamlark/src",

        "-Iexternal/libs7/src",

        "-Iexternal/uthash/include",
        "-Iexternal/libinih",
        "-Iexternal/logc/src"
    ],
    deps = [
        "//external/libinih:inih",
        "@libs7//src:s7",
        "@logc//:logc",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "codept.c",
        "codept_emit.c",
        "codept_parser.c",
        "config.c",
        "fs.c",
        "utils.c",
    ],
    outs = [
        "codept.h",
        "codept_emit.h",
        "codept_parser.h",
        "config.h",
        "fs.h",
        "utils.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location codept.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        "    $(location codept.c) \\",
        "    $(location codept_emit.c) \\",
        "    $(location codept_parser.c) \\",
        "    $(location config.c) \\",
        "    $(location fs.c) \\",
        "    $(location utils.c) ",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs-export",
    srcs = [
        "codept.c",
        "codept_emit.c",
        "codept_parser.c",
        "config.c",
        "fs.c",
        "utils.c",
    ],
    outs = [
        "ocamlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location codept_emit.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) -H \\",
        "    $(location codept.c) \\",
        "    $(location codept_emit.c) \\",
        "    $(location codept_parser.c) \\",
        "    $(location config.c) \\",
        "    $(location fs.c) \\",
        "    $(location utils.c) \\",
        "    > $@",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)
