load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(glob(["*.scm"]))

##########
cc_library(
    name  = "codept",
    # alwayslink = True,
    linkstatic = 1,
    srcs  = [
        "cmd_runner.c",
        "cmd_runner.h",
        # "codept.c",
        # "codept.h",
        # "codept_emit.c",
        # "codept_emit.h",
        # "codept_parser.c",
        # "codept_parser.h",
        "config.c",
        "config.h",
        "s7_config.c",
        "s7_config.h",
        "fs.c",
        "fs.h",
        "glob.c",
        # "glob.h",
        "utils.c",
        "utils.h",
        "@uthash//:include",
    ],
    # data = [
    #     "//scm:camlark.scm"
    # ],
    hdrs = [
        "camlark.h"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/camlark/src",

        "-Iexternal/libs7/src",

        "-Iexternal/uthash/include",
        "-Iexternal/libinih",
        "-Iexternal/logc/src"
    ],
    deps = [
        "//external/libinih:inih",
        "@libs7//src:s7",
        "@logc//:logc",
    ],
    visibility = ["//visibility:public"]
)

# cc_library(
#     name  = "config",
#     # alwayslink = True,
#     linkstatic = 1,
#     srcs  = [
#         # "cmd_runner.c",
#         # "cmd_runner.h",
#         # "codept.c",
#         # "codept.h",
#         # "codept_emit.c",
#         # "codept_emit.h",
#         # "codept_parser.c",
#         # "codept_parser.h",
#         "config.c",
#         "config.h",
#         "s7_config.c",
#         "s7_config.h",
#         # "fs.c",
#         # "fs.h",
#         # "utils.c",
#         # "utils.h",
#         "@uthash//:include",
#     ],
#     # data = [
#     #     "//scm:camlark.scm"
#     # ],
#     hdrs = [
#         "config.h"
#     ],
#     defines = select({
#         "//bzl/host:debug": ["DEBUG_TRACE"],
#         "//conditions:default":   []
#     }),
#     copts = [
#         "-std=c11",

#         "-I$(GENDIR)/src",
#         "-I$(GENDIR)/external/camlark/src",

#         "-Iexternal/libs7/src",

#         "-Iexternal/uthash/include",
#         "-Iexternal/libinih",
#         "-Iexternal/logc/src"
#     ],
#     deps = [
#         "//external/libinih:inih",
#         "@libs7//src:s7",
#         "@logc//:logc",
#     ],
#     visibility = ["//visibility:public"]
# )

########
genrule(
    name = "mkhdrs",
    srcs = [
        "cmd_runner.c",
        "codept.c",
        "codept_emit.c",
        "codept_parser.c",
        "config.c",
        "s7_config.c",
        "fs.c",
        "glob.c",
        "utils.c",
    ],
    outs = [
        "cmd_runner.h",
        "codept.h",
        "codept_emit.h",
        "codept_parser.h",
        "config.h",
        "s7_config.h",
        "fs.h",
        # "glob.h",
        "utils.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location codept.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        "    $(location cmd_runner.c) \\",
        "    $(location codept.c) \\",
        "    $(location codept_emit.c) \\",
        "    $(location codept_parser.c) \\",
        "    $(location config.c) \\",
        "    $(location s7_config.c) \\",
        "    $(location fs.c) \\",
        "    $(location glob.c) \\",
        "    $(location utils.c) ",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs-export",
    srcs = [
        "cmd_runner.c",
        # "codept.c",
        # "codept_emit.c",
        # "codept_parser.c",
        "config.c",
        "s7_config.c",
        # "fs.c",
        # "utils.c",
        "@uthash//:include",
    ],
    outs = [
        "camlark.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location config.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) -H \\",
        "    $(locations @uthash//:include) \\",
        "    $(location cmd_runner.c) \\",
        # "    $(location codept.c) \\",
        # "    $(location codept_emit.c) \\",
        # "    $(location codept_parser.c) \\",
        "    $(location config.c) \\",
        "    $(location s7_config.c) \\",
        # "    $(location fs.c) \\",
        # "    $(location utils.c) \\",
        "    > $@",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)
